Fixed language switcher shadow having higher z-index than the save button #46

--- a/src/app/eav-material-controls/localization/eav-language-switcher/eav-language-switcher.component.scss
+++ b/src/app/eav-material-controls/localization/eav-language-switcher/eav-language-switcher.component.scss
@@ -21,7 +21,7 @@
         position: absolute;
         top: 0;
         display: block;
-        z-index: 10;
+        z-index: 1;
         
         pointer-events: none;
         
